{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 628,
  "lineage": "3574c7cb-c02e-61cc-8994-b711c838b141",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fcf52bcf5db7b003",
            "arn": "arn:aws:ec2:us-west-2:333641116594:instance/i-0b580f5de065faf57",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b580f5de065faf57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088091f5fc7eb3875",
            "private_dns": "ip-10-0-1-47.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-35-89-249-128.us-west-2.compute.amazonaws.com",
            "public_ip": "35.89.249.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fb45c684afb71fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de6e051103348e4d",
            "tags": {
              "Project": "my-jenkins"
            },
            "tags_all": {
              "Project": "my-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c41e1c1d081ee9db"
            ]
          },
          "dependencies": [
            "aws_key_pair.Jen-keys",
            "aws_security_group.jenkins_stack_sg",
            "aws_subnet.jenkins-pub-1",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:333641116594:internet-gateway/igw-0e369f8c98c75c479",
            "id": "igw-0e369f8c98c75c479",
            "owner_id": "333641116594",
            "tags": {
              "Name": "jenkins-IGW"
            },
            "tags_all": {
              "Name": "jenkins-IGW"
            },
            "vpc_id": "vpc-0dbc2da56b7c1c46e"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:333641116594:route-table/rtb-0bac5975ee39d77f2",
            "id": "rtb-0bac5975ee39d77f2",
            "owner_id": "333641116594",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e369f8c98c75c479",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-pub-RT"
            },
            "tags_all": {
              "Name": "jenkins-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc2da56b7c1c46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins-IGW",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e2a84713ab2572f",
            "route_table_id": "rtb-0bac5975ee39d77f2",
            "subnet_id": "subnet-0de6e051103348e4d"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-IGW",
            "aws_route_table.jenkins-pub-RT",
            "aws_subnet.jenkins-pub-1",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:333641116594:security-group/sg-0c41e1c1d081ee9db",
            "description": "Sec Grp for jenkins ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c41e1c1d081ee9db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "193.159.40.236/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "jenkins-stack-sg",
            "name_prefix": "",
            "owner_id": "333641116594",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-security-group",
              "Project": "Jenkins"
            },
            "tags_all": {
              "Name": "jenkins-security-group",
              "Project": "Jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc2da56b7c1c46e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:333641116594:subnet/subnet-0de6e051103348e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6e051103348e4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333641116594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-pub-1"
            },
            "tags_all": {
              "Name": "jenkins-pub-1"
            },
            "vpc_id": "vpc-0dbc2da56b7c1c46e"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:333641116594:vpc/vpc-0dbc2da56b7c1c46e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bd8e87f6fe57cd1",
            "default_route_table_id": "rtb-07114be59487db89b",
            "default_security_group_id": "sg-04aa9aa743b4fe621",
            "dhcp_options_id": "dopt-0ee1c49876bcb4187",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbc2da56b7c1c46e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07114be59487db89b",
            "owner_id": "333641116594",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}